istio/security/peer-authentication-development.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: development-permissive-probes
  namespace: development
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: lpcdm
  mtls:
    mode: STRICT
  portLevelMtls:
    8080:
      mode: PERMISSIVE
